# synthe3

./: .gitignore  Makefile  Makefile.in  Makefile.win  Michel.seg  README  SynCalcul.cpp  SynCalcul.h  SynGlobal.cpp  SynGlobal.h  SynIconv.cpp  SynMain.h  SynParle.cpp  SynParle.cpp.old  SynParle.h  SynSon.cpp  SynSon.h  SynTex.cpp  SynTrans.cpp  SynTrans.h  SynVoix.cpp  SynVoix.h  Synthe.cpp  Synthe.dsp  Synthe.h  Synthe.tab  alsa.cpp  autogen  compiTab.cpp  config.h.in  configure.ac  directson.cpp  main.cpp  modifs.txt  run-synthe3  synthe_cmd.cpp  testSentences.txt  utf-8.cpp
doc/: background.txt  table.txt
src/: SynCalcul.cpp  SynCalcul.h  SynGlobal.cpp  SynGlobal.h  SynMain.h  SynParle.cpp  SynParle.cpp.old  SynParle.h  SynSon.cpp  SynSon.h  SynTex.cpp  SynTrans.cpp  SynTrans.h  SynVoix.cpp  SynVoix.h  Synthe.cpp  Synthe.h  alsa.cpp  directson.cpp  main.cpp  synthe_cmd.cpp
